manifests/web-cluster/prod/helium/vsr-metadata.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vsr-metadata
  name: vsr-metadata
  namespace: helium
spec:
  selector:
    matchLabels:
      app: vsr-metadata
  template:
    metadata:
      labels:
        app: vsr-metadata
    spec:
      containers:
        - name: vsr-metadata
          image: public.ecr.aws/v0j6k5v6/vsr-metadata-service:0.0.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 8081
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 8081
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 250m
              memory: 500Mi
            limits:
              cpu: 500m
              memory: 750Mi
---
apiVersion: v1
kind: Service
metadata:
  name: vsr-metadata
  namespace: helium
spec:
  ports:
    - port: 8081
      protocol: TCP
      targetPort: http
  selector:
    app: vsr-metadata
  sessionAffinity: None
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vsr-metadata
  namespace: helium
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/limit-rps: "10"
    nginx.ingress.kubernetes.io/limit-burst-multiplier: "10"
spec:
  ingressClassName: nginx
  rules:
    - host: positions.nft.helium.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vsr-metadata
                port:
                  number: 8081
